Estilização da scrollbar, botão de adicionar cliente no menu lateral

--- a/src/global.css
+++ b/src/global.css
@@ -132,3 +132,33 @@
     --ring: 224.3 76.3% 48%;
   }
 }
+
+body::-webkit-scrollbar {
+  width: 12px;               /* width of the entire scrollbar */
+}
+
+body::-webkit-scrollbar-track {
+  background: #F4F4F4;        /* color of the tracking area */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #BFBFBF;    /* color of the scroll thumb */
+  border-radius: 20px;       /* roundness of the scroll thumb */
+  border: 3px solid #F4F4F4;  /* creates padding around scroll thumb */
+}
+
+
+div::-webkit-scrollbar {
+  width: 12px;               /* width of the entire scrollbar */
+}
+
+div::-webkit-scrollbar-track {
+  background: #F4F4F4;        /* color of the tracking area */
+}
+
+div::-webkit-scrollbar-thumb {
+  background-color: #BFBFBF;    /* color of the scroll thumb */
+  border-radius: 20px;       /* roundness of the scroll thumb */
+  border: 3px solid #F4F4F4;  /* creates padding around scroll thumb */
+}
+
